--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -196,13 +196,44 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704232107422_InitialModel.cs" />
+    <Compile Include="Migrations\201704232107422_InitialModel.Designer.cs">
+      <DependentUpon>201704232107422_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232119131_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201704232119131_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201704232119131_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232122488_AddMembershipType.cs" />
+    <Compile Include="Migrations\201704232122488_AddMembershipType.Designer.cs">
+      <DependentUpon>201704232122488_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232127541_PopulateMembershipType.cs" />
+    <Compile Include="Migrations\201704232127541_PopulateMembershipType.Designer.cs">
+      <DependentUpon>201704232127541_PopulateMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232135213_RenameProperty.cs" />
+    <Compile Include="Migrations\201704232135213_RenameProperty.Designer.cs">
+      <DependentUpon>201704232135213_RenameProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232140156_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201704232140156_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201704232140156_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704232146505_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201704232146505_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201704232146505_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -272,6 +303,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -283,6 +317,29 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704232107422_InitialModel.resx">
+      <DependentUpon>201704232107422_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232119131_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201704232119131_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232122488_AddMembershipType.resx">
+      <DependentUpon>201704232122488_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232127541_PopulateMembershipType.resx">
+      <DependentUpon>201704232127541_PopulateMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232135213_RenameProperty.resx">
+      <DependentUpon>201704232135213_RenameProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232140156_PopulateMembershipTypes.resx">
+      <DependentUpon>201704232140156_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704232146505_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201704232146505_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
