--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -199,6 +199,23 @@
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Migrations\201705111904188_AddNameColumnInMembershipType.cs" />
+    <Compile Include="Migrations\201705111904188_AddNameColumnInMembershipType.Designer.cs">
+      <DependentUpon>201705111904188_AddNameColumnInMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705111907258_UpdateMembershipTypeTable.cs" />
+    <Compile Include="Migrations\201705111907258_UpdateMembershipTypeTable.Designer.cs">
+      <DependentUpon>201705111907258_UpdateMembershipTypeTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705111918424_AddBirthdateColumn.cs" />
+    <Compile Include="Migrations\201705111918424_AddBirthdateColumn.Designer.cs">
+      <DependentUpon>201705111918424_AddBirthdateColumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705112013367_AddMemshipTypes.cs" />
+    <Compile Include="Migrations\201705112013367_AddMemshipTypes.Designer.cs">
+      <DependentUpon>201705112013367_AddMemshipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MovieGenreType.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -240,6 +257,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -306,6 +324,7 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Customers\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -339,6 +358,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704232146505_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201704232146505_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705111904188_AddNameColumnInMembershipType.resx">
+      <DependentUpon>201705111904188_AddNameColumnInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705111907258_UpdateMembershipTypeTable.resx">
+      <DependentUpon>201705111907258_UpdateMembershipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705111918424_AddBirthdateColumn.resx">
+      <DependentUpon>201705111918424_AddBirthdateColumn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705112013367_AddMemshipTypes.resx">
+      <DependentUpon>201705112013367_AddMemshipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
