--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Migrations\201705112013367_AddMemshipTypes.Designer.cs">
       <DependentUpon>201705112013367_AddMemshipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\MovieGenreType.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -257,7 +258,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -324,7 +325,7 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
-    <Content Include="Views\Customers\New.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
